Revision history for Perl {{$dist->name}}

{{$NEXT}}

2.1100    2020-03-09 03:09:37 -0600
  - Require Alien::Build 2.11 Alien::Base::ModuleBuild 1.14

2.0400    2020-02-05 19:09:04 -0700
  - Require Alien::Build 2.04 Alien::Base::ModuleBuild 1.14

2.0000    2020-02-02 06:27:17 -0700
  - Require Alien::Build 2.00 Alien::Base::ModuleBuild 1.12

1.9800    2020-01-30 07:59:10 -0700
  - Require Alien::Build 1.98 Alien::Base::ModuleBuild 1.10
  - Switched to Dist::Zilla for speedy releases.

1.96 2020-01-28 23:35:59 -0700
  - Require Alien::Base::ModuleBuild 1.08
  - Require Alien::Base 1.96

1.03 2018-05-14 16:31:56 -0400
  - Switch to new alienfile.org for source
  - Require Alien::Base::ModuleBuild 1.03
  - Require Alien::Base 1.41

0.044 2017-08-23 13:46:23 -0400
  - Require Alien::Base 1.01
  - Require Alien::Base::ModuleBuild 0.044

0.042 2017-07-30 06:18:20 -0400
  - Require Alien::Base 0.75
  - Requrre Alien::Base::ModuleBuild 0.042

0.038  Mar 6, 2017
  - Require Alien::Base 0.038

0.032  Feb 9, 2016
  - Require Alien::Base 0.032

0.031  Jan 31, 2016
  - Require Alien::Base 0.031

0.030  Nov 2, 2016
  - Require Alien::Base 0.030
  - No longer bundle dontpanic with this dist, instead download
    it from the official release site:
      https://perl5-alien.github.io/page/dontpanic.html

0.029  Jun 22, 2016
  - Require Alien:Base 0.029

0.028  Mar 14, 2016
  - Require Alien::Base 0.028

0.027  Jan 20, 2016
  - Require Alien::Base 0.025

0.026  Jan 10, 2016
  - Require Alien::Base 0.024
  - Added t/xs.t and t/ffi.t tests that use Test::Alien

0.025  Jul 20, 2015
  - Require Alien::Base 0.022

0.024  Jul 13, 2015
  - Require Alien::Base 0.020

0.023  Apr 27, 2015
  - Bumped version to match new version of Acme::Ford::Prefect

0.022  Apr 24, 2015
  - Require Alien::Base 0.017

0.021  Apr 22, 2015
  - Require Alien::Base 0.016
  - use alien_stage_install

0.020  Mar 17, 2015
  - Require Alien::Base 0.015
  - Fix for static test on MSWin32 and FreeBSD