@@ -11,7 +11,7 @@ version          = 2.1100
 travis_status = 1
 release_tests = 1
 github_user   = PerlAlien
-installer     = Alien
+installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
 
@@ -37,6 +37,8 @@ diag_preamble = | use Acme::Alien::DontPanic;
 diag_preamble = | alien_diag 'Acme::Alien::DontPanic';
 diag_preamble = | };
 
+[AlienBuild]
+:version = 0.10
 
 [Author::Plicease::Core]
 
@@ -44,7 +46,6 @@ diag_preamble = | };
 Alien::Base = 2.11
 
 [Prereqs / ConfigureRequires]
-Alien::Base::ModuleBuild = 1.14
 Alien::Build             = 2.11
 
 [Author::Plicease::Upload]
