@@ -1,6 +1,7 @@
 Revision history for Perl {{$dist->name}}
 
 {{$NEXT}}
+  - Migrated from Alien::Base::ModuleBuild to Alien::Build::MM
 
 2.1100    2020-03-09 03:09:37 -0600
   - Require Alien::Build 2.11 Alien::Base::ModuleBuild 1.14
